docs: add author to package.json

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "type": "git",
     "url": "git+https://github.com/siarohin/Basline.git"
   },
-  "author": "",
+  "author": "Aleksander Seryogin",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/siarohin/Basline/issues"
